Adicionando novos adms e seed atualizado

--- a/app/views/layouts/backoffice_shared/_navigation.html.erb
+++ b/app/views/layouts/backoffice_shared/_navigation.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+        <a class="navbar-brand" href="index.html">BackOffice - EscamboApp</a>
     </div>
     <!-- /.navbar-header -->
 
@@ -45,6 +45,11 @@
                 <li>
                 <%= link_to backoffice_categories_path do %>
                    <i class="fa fa-th-list fa-fw"></i> Categorias
+                <% end %>
+               </li>
+                <li>
+                <%= link_to backoffice_admins_path do %>
+                   <i class="fa fa-users fa-fw"></i> Administradores
                 <% end %>
                </li>
            </ul>
