--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -26,8 +26,11 @@
                             <%= link_to edit_backoffice_admin_path(admin), class: "btn btn-primary btn-circle" do %>
                             <i class="fa fa-edit"></i>
                             <% end %>
-                            <button type="button" class="btn btn-danger btn-circle" disabled="disabled"><i class="fa fa-times"></i>
-                            </button>
+                            <% if current_admin.email != admin.email %>
+                            <%= link_to backoffice_admin_path(admin), method: :delete, class: "btn btn-danger btn-circle",data:{confirm: "Você realmente deseja deletar o Administrador #{admin.email}?"}  do %>
+                                <i class="fa fa-times"></i>
+                            <% end %>
+                            <% end %>
                         </td>
                     </tr>
                     <% end %>
