--- a/app/views/backoffice/categories/index.html.erb
+++ b/app/views/backoffice/categories/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class="page-header">Categorias</h1>
 <div class="panel panel-default">
     <div class="panel-heading">
-        Listando Categorias
+        <%= "Listando #{@categories.first.model_name.human(count: @categories.size)}" %>
         <%= link_to new_backoffice_category_path, class: "btn btn-success btn-circle pull-right", style: "margin-top: -5px" do %>
         <i class="fa fa-plus"></i>
         <% end %>
@@ -13,7 +13,7 @@
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>Descrição da Categoria</th>
+                        <th><%= @categories.model.human_attribute_name('description') %></th>
                         <th></th>
                     </tr>
                 </thead>
