--- a/app/views/backoffice/categories/shared/_form.html.erb
+++ b/app/views/backoffice/categories/shared/_form.html.erb
@@ -18,10 +18,10 @@
         <div class="col-lg-6">
             <%= form_for([:backoffice, @category]) do |f| %>
             <div class="form-group">
-                <label>Descrição</label>
+                <%= f.label :description %>
                 <%= f.text_field :description, class: "form-control", placeholder: "Enter text" %>
             </div>
-            <%= f.submit "Salvar", class: "btn btn-default"%>
+            <%= f.submit "#{t('menssages.save_btn')}", class: "btn btn-default"%>
             <% end %>
         </div>
     </div>
