--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -1,7 +1,7 @@
-<h1 class="page-header">Administradores</h1>
+<h1 class="page-header"><%= @admins.model.model_name.human(count: @admins.size) %></h1>
 <div class="panel panel-default">
     <div class="panel-heading">
-        Listando Administradores
+        <%= "Listando #{@admins.first.model_name.human(count: @admins.size)}" %>
         <%= link_to new_backoffice_admin_path, class: "btn btn-success btn-circle pull-right", style: "margin-top: -5px" do %>
         <i class="fa fa-plus"></i>
         <% end %>
@@ -13,8 +13,9 @@
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>Nome</th>
-                        <th>Email</th>
+                        <th><%= @admins.model.human_attribute_name("name") %></th>
+                        <th><%= @admins.model.human_attribute_name("email") %></th>
+                        <th><%= @admins.model.human_attribute_name("role") %></th>
                         <th></th>
                     </tr>
                 </thead>
@@ -24,6 +25,7 @@
                         <td><%= admin.id %></td>
                         <td><%= admin.name %></td>
                         <td><%= admin.email %></td>
+                        <td><%= admin.role_br %></td>
                         <td style="width: 150px">
                             <%= link_to edit_backoffice_admin_path(admin), class: "btn btn-primary btn-circle" do %>
                             <i class="fa fa-edit"></i>
