--- a/app/views/backoffice/admins/new.html.erb
+++ b/app/views/backoffice/admins/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "backoffice/admins/shared/form", locals: {action: "Novo Administrador"} %>
+<%= render partial: "backoffice/admins/shared/form", locals: {action: "#{t('menssages.adminNew')}"} %>
