--- a/app/views/backoffice/categories/edit.html.erb
+++ b/app/views/backoffice/categories/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "backoffice/categories/shared/form", locals: {action:"Editando Categoria"} %>
+<%= render partial: "backoffice/categories/shared/form", locals: {action:"#{t('menssages.categoryEdit')}"} %>
