--- a/app/views/backoffice/categories/new.html.erb
+++ b/app/views/backoffice/categories/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "backoffice/categories/shared/form", locals: {action:"Nova Categoria"} %>
+<%= render partial: "backoffice/categories/shared/form", locals: {action:"#{t('menssages.categoryNew')}"} %>
