pundit admin new

--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -2,8 +2,11 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <%= "Listando #{@admins.first.model_name.human(count: @admins.size)}" %>
-        <%= link_to new_backoffice_admin_path, class: "btn btn-success btn-circle pull-right", style: "margin-top: -5px" do %>
-        <i class="fa fa-plus"></i>
+
+        <% if policy(@admins).new? %>
+            <%= link_to new_backoffice_admin_path, class: "btn btn-success btn-circle pull-right", style: "margin-top: -5px" do %>
+            <i class="fa fa-plus"></i>
+            <% end %>
         <% end %>
     </div>
     <!-- /.panel-heading -->
