--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -10,11 +10,11 @@
     <meta name="author" content="">
 
     <title>Escamboapp</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag    'backoffice', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all'%>
+    <%= stylesheet_link_tag    'backoffice', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
-    <%= javascript_include_tag 'backoffice', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'backoffice' %>
     <%= csrf_meta_tags %>
 </head>
 
@@ -40,6 +40,12 @@
     <% if notice  %>
     <script>
         $.notify("<%= notice %>", "success");
+    </script>
+    <% end %>
+
+    <% if alert  %>
+    <script>
+        $.notify("<%= alert %>", "error");
     </script>
     <% end %>
 </body>
