--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -28,15 +28,19 @@
                         <td><%= admin.id %></td>
                         <td><%= admin.name %></td>
                         <td><%= admin.email %></td>
-                        <td><%= admin.role_br %></td>
+                        <td><%= admin.role_i18n %></td>
                         <td style="width: 150px">
                             <%= link_to edit_backoffice_admin_path(admin), class: "btn btn-primary btn-circle" do %>
                             <i class="fa fa-edit"></i>
                             <% end %>
-                            <% if current_admin.email != admin.email %>
-                            <%= link_to backoffice_admin_path(admin), method: :delete, class: "btn btn-danger btn-circle",data:{confirm: "Você realmente deseja deletar o Administrador #{admin.email}?"}  do %>
-                                <i class="fa fa-times"></i>
-                            <% end %>
+                            <% if current_admin.email != admin.email && policy(current_admin).destroy? %>
+                                <%= link_to backoffice_admin_path(admin), method: :delete, class: "btn btn-danger btn-circle",data:{confirm: "Você realmente deseja deletar o Administrador #{admin.email}?"}  do %>
+                                    <i class="fa fa-times"></i>
+                                <% end %>
+                            <% else %>
+                                <%= link_to "#", class: "btn btn-danger btn-circle", disabled: 'disabled' do %>
+                                    <i class="fa fa-times"></i>
+                                <% end %>
                             <% end %>
                         </td>
                     </tr>
