--- a/app/views/layouts/backoffice_shared/_navigation.html.erb
+++ b/app/views/layouts/backoffice_shared/_navigation.html.erb
@@ -7,7 +7,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">BackOffice - EscamboApp</a>
+        <%= link_to backoffice_dashboard_path,class:"navbar-brand" do %>
+            BackOffice - EscamboApp
+        <% end %>
     </div>
     <!-- /.navbar-header -->
 
