--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -17,7 +17,6 @@
                     <tr>
                         <th>#</th>
                         <th><%= @admins.model.human_attribute_name("name") %></th>
-                        <th><%= @admins.model.human_attribute_name("email") %></th>
                         <th><%= @admins.model.human_attribute_name("role") %></th>
                         <th></th>
                     </tr>
@@ -27,11 +26,13 @@
                     <tr>
                         <td><%= admin.id %></td>
                         <td><%= admin.name %></td>
-                        <td><%= admin.email %></td>
                         <td><%= admin.role_i18n %></td>
                         <td style="width: 150px">
+                            <%= link_to edit_backoffice_send_mail_path(admin), class: "btn btn-info btn-circle", remote: true do %>
+                                <i class="fa fa-envelope"></i>
+                            <% end %>
                             <%= link_to edit_backoffice_admin_path(admin), class: "btn btn-primary btn-circle" do %>
-                            <i class="fa fa-edit"></i>
+                                <i class="fa fa-edit"></i>
                             <% end %>
                             <% if current_admin.email != admin.email && policy(current_admin).destroy? %>
                                 <%= link_to backoffice_admin_path(admin), method: :delete, class: "btn btn-danger btn-circle",data:{confirm: "Você realmente deseja deletar o Administrador #{admin.email}?"}  do %>
@@ -53,3 +54,4 @@
     <!-- /.panel-body -->
 </div>
 <!-- /.panel-default -->
+<%= render partial: 'backoffice/admins/shared/send_mail' %>
